[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://themes/main_menu.tres" type="Theme" id=2]
[ext_resource path="res://code/ui/LevelItem.gd" type="Script" id=3]

[node name="LevelItem" type="PanelContainer"]
margin_right = 206.0
margin_bottom = 165.0
focus_mode = 2
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 201.0
margin_bottom = 160.0
theme = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
visible = false
margin_right = 196.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="LevelName" type="Label" parent="VBoxContainer"]
margin_right = 196.0
margin_bottom = 87.0
theme = ExtResource( 2 )
theme_type_variation = "ButtonUnselected"
text = "Level 1"

[connection signal="focus_entered" from="." to="." method="_on_LevelItem_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_LevelItem_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_LevelItem_gui_input"]
